[fix] table tr modal css name 수정 (통일) click event에서 z-index 수정

--- a/statics/css/app.css
+++ b/statics/css/app.css
@@ -131,8 +131,9 @@
 
 .table__td{
     padding: 0.75rem 1rem;
+    height: 100%;
     display: table-cell;
-    align-items: center;
+    vertical-align: middle;
 }
 .table__td .checkbox{
     display: inline-block;
@@ -152,11 +153,7 @@
     font-size: 0.875rem;
 }
 
-.table__tbody .table__tr .button--outline{
-    position: relative;
-}
-
-.table__modal{
+.list-modal{
     border-radius: .5rem;
     background: var(--background-color);
     color: var(--text-color-800);
@@ -165,17 +162,25 @@
     right: 0;
     top: 100%;
     min-width: 8rem;
+    max-width: 10rem;
 
     border: 1px solid var(--theme-color-400);
     box-shadow: var(--box-shadow--3);
 
-    z-index: 1;
+    z-index: 10;
+    padding: 1rem;
 }
-.table__modal li{
-    padding: .5em .1em;
+
+.table__tbody .table__tr .button--outline{
+    position: relative;
+}
+
+
+.list-modal li{
+    padding: .5em 0;
 }  
 
-.table__modal li:hover{
+.list-modal li:hover{
     background:var(--theme-color-100);
 }
 
@@ -199,7 +204,12 @@
 .table-top__tab .tab__item{
     margin-right: 1.75rem;
 }
-
+.table__tr{
+    position: relative;
+}
+.table__td:last-child{
+    position: absolute;
+}
 
 @media all and (max-width:768px){
     
@@ -220,7 +230,6 @@
         align-items: flex-start;
         width: 100%;
         padding: 1rem 0;
-        position: relative;
     }
     
     .table__tr .checkbox{
@@ -230,7 +239,6 @@
         padding: .5em;
     }
     .table__td:last-child{
-        position: absolute;
         right: 0;
         top: 50%;
         transform: translateY(-50%);
